[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Login.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 21
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 3 )

[node name="Login" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 464.0 ]
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0 )

[node name="Title" type="Label" parent="."]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 1 )
text = "Sign In"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="."]
margin_left = 19.0712
margin_top = 316.0
margin_right = 393.071
margin_bottom = 337.0
custom_fonts/font = SubResource( 2 )
text = "E-Mail:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="Label" parent="."]
margin_left = 17.0
margin_top = 412.0
margin_right = 393.0
margin_bottom = 433.0
custom_fonts/font = SubResource( 2 )
text = "Password:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login" type="Button" parent="."]
margin_left = 808.0
margin_top = 560.0
margin_right = 946.0
margin_bottom = 597.0
custom_fonts/font = SubResource( 3 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_email" type="LineEdit" parent="."]
margin_left = 482.0
margin_top = 301.0
margin_right = 786.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_pass" type="LineEdit" parent="."]
margin_left = 482.0
margin_top = 396.0
margin_right = 786.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 4 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="Label" parent="."]
margin_left = 32.0
margin_top = 504.0
margin_right = 992.0
margin_bottom = 525.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.690196, 0.0235294, 0.0235294, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 40.0
margin_top = 592.0
margin_right = 648.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0235294, 0.92549, 0.121569, 1 )
text = "Don't have an account? Regiter now"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="login" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
